--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -11,13 +11,12 @@
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import svm \n",
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report, confusion_matrix \n",
     "from sklearn import preprocessing\n",
-    "from math import sqrt\n",
     "import pandas as pd"
    ]
   },
@@ -25,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading the data"
+    "## Importing and Reading the data"
    ]
   },
   {
@@ -75,12 +74,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Label Encoding of features "
+    "## Label Encoding of Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## One Hot Encoding the Label Encoded Data"
+    "## One Hot Encoding of Label Encoded Features"
    ]
   },
   {
@@ -150,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Putting all the features altogether in one DataFrame"
+    "## Putting all the feature together in one DataFrame"
    ]
   },
   {
@@ -210,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Splitting Test and Train Data"
+    "## Splitting Testing and Training Data"
    ]
   },
   {
@@ -243,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fitting into Logistic Regression Model"
+    "## Fitting into SVM Model"
    ]
   },
   {
@@ -252,16 +251,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LR = LogisticRegression(class_weight = 'balanced')\n",
-    "LR.fit(X_Train, y_train)\n",
-    "y_pred = LR.predict(X_Test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluating the Model"
+    "clf = svm.SVC()\n",
+    "clf.fit(X_Train, y_train) \n",
+    "y_pred = clf.predict(X_Test)"
    ]
   },
   {
@@ -273,21 +265,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[956 376]\n",
-      " [ 69 360]]\n",
+      "[[1170  138]\n",
+      " [ 229  224]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.93      0.72      0.81      1332\n",
-      "          1       0.49      0.84      0.62       429\n",
+      "          0       0.84      0.89      0.86      1308\n",
+      "          1       0.62      0.49      0.55       453\n",
       "\n",
-      "avg / total       0.82      0.75      0.76      1761\n",
+      "avg / total       0.78      0.79      0.78      1761\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(confusion_matrix(y_test,y_pred))  \n",
-    "print(classification_report(y_test,y_pred))  "
+    "print(classification_report(y_test,y_pred))"
    ]
   },
   {
