--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,11 +214,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(data_df, label_df['Churn_Code'], test_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender_Female</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>Senior_Citizen</th>\n",
+       "      <th>Partner_Yes</th>\n",
+       "      <th>Partner_No</th>\n",
+       "      <th>Dependents_Yes</th>\n",
+       "      <th>Dependents_No</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>PhoneService_Yes</th>\n",
+       "      <th>PhoneService_No</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Contract_Yearly</th>\n",
+       "      <th>Contract_TwoYearly</th>\n",
+       "      <th>PaperlessBilling_Yes</th>\n",
+       "      <th>PaperlessBilling_No</th>\n",
+       "      <th>PaymentMethod_Electronic</th>\n",
+       "      <th>PaymentMethod_Mail</th>\n",
+       "      <th>PaymentMethod_Bank</th>\n",
+       "      <th>PaymentMethod_Credit</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "      <td>7043.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.495244</td>\n",
+       "      <td>0.504756</td>\n",
+       "      <td>0.162147</td>\n",
+       "      <td>0.516967</td>\n",
+       "      <td>0.483033</td>\n",
+       "      <td>0.299588</td>\n",
+       "      <td>0.700412</td>\n",
+       "      <td>32.371149</td>\n",
+       "      <td>0.903166</td>\n",
+       "      <td>0.096834</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.209144</td>\n",
+       "      <td>0.240664</td>\n",
+       "      <td>0.592219</td>\n",
+       "      <td>0.407781</td>\n",
+       "      <td>0.335794</td>\n",
+       "      <td>0.228880</td>\n",
+       "      <td>0.219225</td>\n",
+       "      <td>0.216101</td>\n",
+       "      <td>64.295897</td>\n",
+       "      <td>2280.528184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.500013</td>\n",
+       "      <td>0.500013</td>\n",
+       "      <td>0.368612</td>\n",
+       "      <td>0.499748</td>\n",
+       "      <td>0.499748</td>\n",
+       "      <td>0.458110</td>\n",
+       "      <td>0.458110</td>\n",
+       "      <td>24.559481</td>\n",
+       "      <td>0.295752</td>\n",
+       "      <td>0.295752</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.406726</td>\n",
+       "      <td>0.427517</td>\n",
+       "      <td>0.491457</td>\n",
+       "      <td>0.491457</td>\n",
+       "      <td>0.472301</td>\n",
+       "      <td>0.420141</td>\n",
+       "      <td>0.413751</td>\n",
+       "      <td>0.411613</td>\n",
+       "      <td>30.092727</td>\n",
+       "      <td>2265.745655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>401.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>1394.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>3786.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>118.000000</td>\n",
+       "      <td>8684.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 45 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Gender_Female  Gender_Male  Senior_Citizen  Partner_Yes   Partner_No  \\\n",
+       "count    7043.000000  7043.000000     7043.000000  7043.000000  7043.000000   \n",
+       "mean        0.495244     0.504756        0.162147     0.516967     0.483033   \n",
+       "std         0.500013     0.500013        0.368612     0.499748     0.499748   \n",
+       "min         0.000000     0.000000        0.000000     0.000000     0.000000   \n",
+       "25%         0.000000     0.000000        0.000000     0.000000     0.000000   \n",
+       "50%         0.000000     1.000000        0.000000     1.000000     0.000000   \n",
+       "75%         1.000000     1.000000        0.000000     1.000000     1.000000   \n",
+       "max         1.000000     1.000000        1.000000     1.000000     1.000000   \n",
+       "\n",
+       "       Dependents_Yes  Dependents_No       Tenure  PhoneService_Yes  \\\n",
+       "count     7043.000000    7043.000000  7043.000000       7043.000000   \n",
+       "mean         0.299588       0.700412    32.371149          0.903166   \n",
+       "std          0.458110       0.458110    24.559481          0.295752   \n",
+       "min          0.000000       0.000000     0.000000          0.000000   \n",
+       "25%          0.000000       0.000000     9.000000          1.000000   \n",
+       "50%          0.000000       1.000000    29.000000          1.000000   \n",
+       "75%          1.000000       1.000000    55.000000          1.000000   \n",
+       "max          1.000000       1.000000    72.000000          1.000000   \n",
+       "\n",
+       "       PhoneService_No      ...       Contract_Yearly  Contract_TwoYearly  \\\n",
+       "count      7043.000000      ...           7043.000000         7043.000000   \n",
+       "mean          0.096834      ...              0.209144            0.240664   \n",
+       "std           0.295752      ...              0.406726            0.427517   \n",
+       "min           0.000000      ...              0.000000            0.000000   \n",
+       "25%           0.000000      ...              0.000000            0.000000   \n",
+       "50%           0.000000      ...              0.000000            0.000000   \n",
+       "75%           0.000000      ...              0.000000            0.000000   \n",
+       "max           1.000000      ...              1.000000            1.000000   \n",
+       "\n",
+       "       PaperlessBilling_Yes  PaperlessBilling_No  PaymentMethod_Electronic  \\\n",
+       "count           7043.000000          7043.000000               7043.000000   \n",
+       "mean               0.592219             0.407781                  0.335794   \n",
+       "std                0.491457             0.491457                  0.472301   \n",
+       "min                0.000000             0.000000                  0.000000   \n",
+       "25%                0.000000             0.000000                  0.000000   \n",
+       "50%                1.000000             0.000000                  0.000000   \n",
+       "75%                1.000000             1.000000                  1.000000   \n",
+       "max                1.000000             1.000000                  1.000000   \n",
+       "\n",
+       "       PaymentMethod_Mail  PaymentMethod_Bank  PaymentMethod_Credit  \\\n",
+       "count         7043.000000         7043.000000           7043.000000   \n",
+       "mean             0.228880            0.219225              0.216101   \n",
+       "std              0.420141            0.413751              0.411613   \n",
+       "min              0.000000            0.000000              0.000000   \n",
+       "25%              0.000000            0.000000              0.000000   \n",
+       "50%              0.000000            0.000000              0.000000   \n",
+       "75%              0.000000            0.000000              0.000000   \n",
+       "max              1.000000            1.000000              1.000000   \n",
+       "\n",
+       "       MonthlyCharges  TotalCharges  \n",
+       "count     7043.000000   7043.000000  \n",
+       "mean        64.295897   2280.528184  \n",
+       "std         30.092727   2265.745655  \n",
+       "min         18.000000     18.000000  \n",
+       "25%         35.000000    401.500000  \n",
+       "50%         70.000000   1394.000000  \n",
+       "75%         89.000000   3786.500000  \n",
+       "max        118.000000   8684.000000  \n",
+       "\n",
+       "[8 rows x 45 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### As we can see that the min and max values of the features vary. This will wrong results if the same will be used to fit the model. To bring the features in the same range, it is imortant to do the feature scaling."
    ]
   },
   {
@@ -230,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,32 +574,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(kernel='rbf', C = 0.5)\n",
     "clf.fit(X_Train, y_train) \n",
     "y_pred = clf.predict(X_Test)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating the Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1170  138]\n",
-      " [ 229  224]]\n",
+      "[[1190  110]\n",
+      " [ 225  236]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.84      0.89      0.86      1308\n",
-      "          1       0.62      0.49      0.55       453\n",
+      "          0       0.84      0.92      0.88      1300\n",
+      "          1       0.68      0.51      0.58       461\n",
       "\n",
-      "avg / total       0.78      0.79      0.78      1761\n",
+      "avg / total       0.80      0.81      0.80      1761\n",
       "\n"
      ]
     }
