Improved Random Forest Classifier

--- a/Random Forest.ipynb
+++ b/Random Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,25 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.77279155e-02 1.73087981e-02 1.74321922e-02 1.44909437e-02\n",
-      " 1.35088439e-02 1.35027558e-02 1.13589115e-02 1.32345861e-01\n",
-      " 2.94044776e-03 3.39101244e-03 2.23477725e-03 1.22297724e-02\n",
-      " 1.17944379e-02 7.67151917e-03 2.61380555e-02 1.00168832e-02\n",
-      " 6.70787236e-03 5.21908886e-02 9.74978220e-04 1.33657002e-02\n",
-      " 1.50634146e-02 1.03073421e-04 1.07946537e-02 1.18020918e-02\n",
-      " 7.14860950e-05 1.35474157e-02 2.26521684e-02 5.20367650e-03\n",
-      " 1.24110071e-02 9.86262926e-03 7.37897935e-03 1.05940466e-02\n",
-      " 1.20742619e-02 1.18081570e-05 4.38333415e-02 1.38021178e-02\n",
-      " 3.23936823e-02 1.53229711e-02 1.73128889e-02 2.56257603e-02\n",
-      " 1.33659726e-02 1.21847618e-02 1.12315054e-02 1.36494101e-01\n",
-      " 1.59529618e-01]\n"
+      "[1.67464763e-02 1.65675257e-02 2.10393820e-02 1.66284303e-02\n",
+      " 1.63184686e-02 1.26101760e-02 1.20535422e-02 1.45103874e-01\n",
+      " 3.21756932e-03 3.66398385e-03 2.70856849e-03 1.06470618e-02\n",
+      " 1.33984654e-02 1.18725988e-02 1.71929860e-02 1.02877053e-02\n",
+      " 8.08377133e-03 4.92701386e-02 9.53458998e-05 1.18002715e-02\n",
+      " 1.61357953e-02 9.54143472e-06 1.21570606e-02 1.29384894e-02\n",
+      " 1.61274087e-03 1.10445503e-02 1.38660187e-02 5.64464188e-03\n",
+      " 1.13724722e-02 1.08807362e-02 5.74487095e-03 1.13409809e-02\n",
+      " 1.20189266e-02 4.74792694e-04 5.32545573e-02 1.64476360e-02\n",
+      " 3.27743582e-02 1.49181640e-02 1.51632517e-02 2.18072590e-02\n",
+      " 1.05915732e-02 1.22630415e-02 1.10757212e-02 1.37628796e-01\n",
+      " 1.49527682e-01]\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,21 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1160  134]\n",
-      " [ 280  187]]\n",
+      "[[1175  126]\n",
+      " [ 259  201]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.81      0.90      0.85      1294\n",
-      "          1       0.58      0.40      0.47       467\n",
+      "          0       0.82      0.90      0.86      1301\n",
+      "          1       0.61      0.44      0.51       460\n",
       "\n",
-      "avg / total       0.75      0.76      0.75      1761\n",
+      "avg / total       0.77      0.78      0.77      1761\n",
       "\n"
      ]
     }
@@ -273,6 +273,37 @@
    "source": [
     "print(confusion_matrix(y_test,y_pred))  \n",
     "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.67464763e-02, 1.65675257e-02, 2.10393820e-02, 1.66284303e-02,\n",
+       "       1.63184686e-02, 1.26101760e-02, 1.20535422e-02, 1.45103874e-01,\n",
+       "       3.21756932e-03, 3.66398385e-03, 2.70856849e-03, 1.06470618e-02,\n",
+       "       1.33984654e-02, 1.18725988e-02, 1.71929860e-02, 1.02877053e-02,\n",
+       "       8.08377133e-03, 4.92701386e-02, 9.53458998e-05, 1.18002715e-02,\n",
+       "       1.61357953e-02, 9.54143472e-06, 1.21570606e-02, 1.29384894e-02,\n",
+       "       1.61274087e-03, 1.10445503e-02, 1.38660187e-02, 5.64464188e-03,\n",
+       "       1.13724722e-02, 1.08807362e-02, 5.74487095e-03, 1.13409809e-02,\n",
+       "       1.20189266e-02, 4.74792694e-04, 5.32545573e-02, 1.64476360e-02,\n",
+       "       3.27743582e-02, 1.49181640e-02, 1.51632517e-02, 2.18072590e-02,\n",
+       "       1.05915732e-02, 1.22630415e-02, 1.10757212e-02, 1.37628796e-01,\n",
+       "       1.49527682e-01])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.feature_importances_"
    ]
   },
   {
