Improved Random Forest Classifier

--- a/Random Forest.ipynb
+++ b/Random Forest.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -65,6 +72,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Label Encoding the Categorical Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -91,6 +105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One-Hot Encoding of Label Encoded Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -112,6 +133,13 @@
     "j = pd.get_dummies(label_df['Contract_Code'])\n",
     "k = pd.get_dummies(label_df['PaperlessBilling_Code'])\n",
     "l = pd.get_dummies(label_df['PaymentMethod_Code'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assembling the data"
    ]
   },
   {
@@ -168,12 +196,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting training and testing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(data_df, label_df['Churn_Code'], test_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling of Training and Testing Data"
    ]
   },
   {
@@ -184,6 +226,13 @@
    "source": [
     "X_Train = preprocessing.scale(X_train)\n",
     "X_Test = preprocessing.scale(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting data into Random Forest Classifier Model"
    ]
   },
   {
@@ -277,34 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.67464763e-02, 1.65675257e-02, 2.10393820e-02, 1.66284303e-02,\n",
-       "       1.63184686e-02, 1.26101760e-02, 1.20535422e-02, 1.45103874e-01,\n",
-       "       3.21756932e-03, 3.66398385e-03, 2.70856849e-03, 1.06470618e-02,\n",
-       "       1.33984654e-02, 1.18725988e-02, 1.71929860e-02, 1.02877053e-02,\n",
-       "       8.08377133e-03, 4.92701386e-02, 9.53458998e-05, 1.18002715e-02,\n",
-       "       1.61357953e-02, 9.54143472e-06, 1.21570606e-02, 1.29384894e-02,\n",
-       "       1.61274087e-03, 1.10445503e-02, 1.38660187e-02, 5.64464188e-03,\n",
-       "       1.13724722e-02, 1.08807362e-02, 5.74487095e-03, 1.13409809e-02,\n",
-       "       1.20189266e-02, 4.74792694e-04, 5.32545573e-02, 1.64476360e-02,\n",
-       "       3.27743582e-02, 1.49181640e-02, 1.51632517e-02, 2.18072590e-02,\n",
-       "       1.05915732e-02, 1.22630415e-02, 1.10757212e-02, 1.37628796e-01,\n",
-       "       1.49527682e-01])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.feature_importances_"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
